created new html files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<h1>My second git file</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Hi Kate!</title>
+  </head>
+  <body>
+    <h1>Kate site</h1>
+    <h2>Говорим о курсаче</h2>
+    <h3>Тема курсача</h3>
+    <h4>Подзаголовок</h4>
+    <h5>Маленький заголовок</h5>
+    <h6>Самый Маленький заголовок</h6>
+    <a href="/about">Страница о Кате</a>
+  </body>
+</html>
