--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h5>Маленький заголовок</h5>
     <h6>Самый Маленький заголовок</h6>
     <a href="/about">Страница о Кате</a>
+    <h1>КАКАЯ-ТО 💩💩💩💩💩💩💩💩💩💩💩💩💩💩 💩💩💩💩💩 💩💩💩💩💩</h1>
   </body>
 </html>
